contact.php/スタイルを作成
追加

--- a/wp-content/themes/mc/src/sass/globals/_variables.scss
+++ b/wp-content/themes/mc/src/sass/globals/_variables.scss
@@ -1,13 +1,14 @@
 // Colors
 $cWhite: #fff;
 $cBlack: #000;
+$cRed: #f00;
 $cBgGray: rgba(125, 125, 125, 0.3);
 $cBgGrayHover: rgba(125, 125, 125, 0.6);
 $cMainPurple1: #6253e1;
 $cMainPurple2: #852d91;
 $cMainPurple3: #a3a1ff;
 $cMainPurple4: #f24645;
-$cWorksBorder: #7d7d7d;
+$cBorderGray: #7d7d7d;
 $cShadowPurple: #cf00ff;
 $cNumberShadow: rgba(190, 0, 255, 0.5);
 
