--- a/wp-content/themes/mc/src/sass/pages/_contact.scss
+++ b/wp-content/themes/mc/src/sass/pages/_contact.scss
@@ -7,8 +7,216 @@
 .contact-page {
 
   & .appear.up.inview {
-    .contact-page__list.item:nth-child(1) {
+    .contact-page__wrapper.item:nth-child(1) {
       transition-delay: 0.8s;
+
+      @include animation(
+        $name: form-shadow,
+        $duration: 1.8s,
+        $timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940),
+        $delay: 0.8s,
+        $iteration-count: 1,
+        $direction: normal,
+        $fill-mode: forwards
+      );
     }
+  }
+
+  &__wrapper {
+    max-width: 720px;
+    margin: 0 auto;
+    padding: 8%;
+    color: $cWhite;
+    border-radius: 20px;
+    background-color: $cBgGray;
+
+    @include mq(lg) {
+      padding: 50px;
+    }
+  }
+}
+
+// Contact Form 7（デフォルトのCSSをカスタマイズ）
+.wpcf7 {
+
+  // ページ上部に表示されるエラーメッセージ
+  & .screen-reader-response {
+    display: none;
+  }
+
+  & form {
+    // 送信ボタン下部の送信応答メッセージ
+    & .wpcf7-response-output {
+      color: $cWhite;
+      border: 1px solid $cWhite;
+      padding: 8px 1em;
+      margin: 30px 0 0 0;
+      text-align: center;
+    }
+
+    // 送信応答メッセージ（成功）
+    &.sent .wpcf7-response-output {
+      border-color: $cWhite;
+    }
+
+    // 送信応答メッセージ（エラー）
+    &.failed .wpcf7-response-output,
+    &.aborted .wpcf7-response-output,
+    &.spam .wpcf7-response-output,
+    &.invalid .wpcf7-response-output,
+    &.unaccepted .wpcf7-response-output,
+    &.payment-required .wpcf7-response-output {
+      border-color: $cRed;
+      color: $cRed;
+      font-weight: 700;
+
+      &::before {
+        font-family: "Font Awesome 6 Free";
+        content: "\f071";
+        font-weight: 900;
+        display: inline-block;
+        margin-right: 0.5em;
+      }
+    }
+
+    // 入力欄下部の無効メッセージ
+    & .wpcf7-not-valid-tip {
+      color: $cRed;
+      border: 1px solid $cRed;
+      font-weight: 700;
+      padding: 8px 1em;
+      margin: 10px 0 0 0;
+
+      &::before {
+        font-family: "Font Awesome 6 Free";
+        content: "\f071";
+        font-weight: 900;
+        display: inline-block;
+        margin-right: 0.5em;
+      }
+    }
+
+    // 入力欄無効メッセージ（フローティングティップ形式）
+    & .use-floating-validation-tip .wpcf7-not-valid-tip {
+      display: none;
+    }
+
+    // 送信ボタン付近の回転ローダー
+    & .wpcf7-spinner {
+      display: none;
+    }
+  }
+}
+
+// Contact Form 7（オリジナルのデザインにカスタマイズ）
+.wpcf7-form {
+
+  &__item + &__item {
+    margin-top: 30px;
+  }
+
+  &__title {
+    display: block;
+    font-weight: 700;
+  }
+
+  &__radio, &__input, &__textarea {
+    margin-top: 10px;
+  }
+  
+  &__note {
+    @include f_around(10, false, false, false);
+    margin-left: 5px;
+  }
+
+  &__require {
+    @include f_around(10, false, false, false);
+    color: $cRed;
+    margin-left: 10px;
+  }
+
+  &__radio {
+    display: block;
+
+    & .wpcf7-list-item {
+      margin: 0;
+      display: block;
+
+      @include mq(lg) {
+        display: inline-block;
+      }
+
+      & + .wpcf7-list-item {
+        margin-top: 5px;
+  
+        @include mq(lg) {
+          margin-top: 0px;
+          margin-left: 35px;        
+        }
+      }
+
+      &-label {
+        margin-left: 5px;
+      }
+
+      &-label::before, &-label::after {
+        display: none;
+      }
+    }
+  }
+
+  &__input {
+    width: 100%;
+    color: $cBlack;
+    padding: 8px;
+    border: solid 1px $cBorderGray;
+    border-radius: 5px;
+    background-color: $cWhite;
+
+    @include mq(lg) {
+      width: 300px;
+    }
+  }
+
+  & input[type="tel"] {
+    width: 100%;
+
+    @include mq(lg) {
+      width: 200px;
+    }
+  }
+
+  &__textarea {
+    width: 100%;
+    min-height: 200px;
+    color: $cBlack;
+    padding: 8px;
+    border: 1px solid $cBorderGray;
+    border-radius: 5px;
+    background-color: $cWhite;
+    resize: vertical; // ユーザーによる縦方向のリサイズを許可
+
+    @include mq(lg) {
+      min-width: 500px;
+    }
+  }
+
+  &__link {
+    margin-top: 50px;  
+  }
+
+  &__btn {
+    border: 0;
+  }
+}
+
+@keyframes form-shadow {
+  0% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0),
+    inset 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    box-shadow: 0px 0px 5px 5px $cShadowPurple,
+    inset 0 0 18px 3px rgba(0, 0, 0, 0.7);
   }
 }
