single-works.php/parallaxの文字サイズを変更

--- a/wp-content/themes/mc/src/sass/globals/_variables.scss
+++ b/wp-content/themes/mc/src/sass/globals/_variables.scss
@@ -32,3 +32,4 @@ $loader-shadow: 0 0 10px 2px rgb(255, 0, 255, 0.8) inset;
 $btn-shadow: 0 4px 15px 0 rgba(205, 95, 255, 0.75);
 $btn-shadow-hover: 0 4px 20px 0 rgba(245, 100, 255, 0.75);
 $about-box-shadow: 10px;
+$article-parallax-shadow: 4px 6px 8px rgba(255, 0, 255, 0.25);
