--- a/wp-content/themes/mc/style.css
+++ b/wp-content/themes/mc/style.css
@@ -1946,28 +1946,27 @@ Contact
   box-shadow: inset 0 0 50px 20px #000;
 }
 .article-page .parallax__title {
-  font-size: 1.8rem;
+  font-size: 3rem;
   font-weight: 700;
-  letter-spacing: 0.05em;
-  line-height: 1;
+  letter-spacing: 0.1em;
+  text-align: center;
   z-index: 1;
 }
 @media screen and (min-width: 600px) {
   .article-page .parallax__title {
-    font-size: 2.4rem;
-    letter-spacing: 0.1em;
-    line-height: 1;
+    font-size: 5.2rem;
+    letter-spacing: 0.125em;
   }
 }
 @media screen and (min-width: 960px) {
   .article-page .parallax__title {
-    font-size: 3rem;
-    line-height: 1;
+    font-size: 5.6rem;
+    letter-spacing: 0.15em;
   }
 }
 .article-page .parallax__title .char {
   display: inline-block;
-  text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.25);
+  text-shadow: 4px 6px 8px rgba(255, 0, 255, 0.25);
   background: linear-gradient(to bottom, #6253e1, #852d91, #a3a1ff, #f24645);
   color: #6253e1;
   background-clip: text;
