--- a/wp-content/themes/mc/src/sass/pages/_home.scss
+++ b/wp-content/themes/mc/src/sass/pages/_home.scss
@@ -453,7 +453,7 @@ Works
         $cMainPurple4
       );
       filter: blur(50px) opacity(0.6);
-      transform: translateY(10px) scale(1.1);
+      transform: translateY(10px);
     }
     
     @include mq() {
