--- a/wp-content/themes/mc/style.css
+++ b/wp-content/themes/mc/style.css
@@ -2331,15 +2331,20 @@ Contact
   visibility: hidden;
 }
 .works .slide__title {
-  font-size: 2.4rem;
+  font-size: 3.2rem;
   font-weight: 700;
   letter-spacing: 0.075em;
   line-height: 1;
 }
+@media screen and (min-width: 600px) {
+  .works .slide__title {
+    font-size: 3.8rem;
+    letter-spacing: 0.1em;
+  }
+}
 @media screen and (min-width: 960px) {
   .works .slide__title {
     font-size: 4.2rem;
-    letter-spacing: 0.1em;
   }
 }
 .works .slide__text {
