--- a/wp-content/themes/mc/style.css
+++ b/wp-content/themes/mc/style.css
@@ -1108,26 +1108,27 @@ About
   }
 }
 .about__item-content-title {
-  font-size: 2rem;
+  font-size: clamp(20px, 6vw, 26px);
   letter-spacing: 0.125em;
-  line-height: 1.5;
+  line-height: 1.25;
   display: inline-block;
   position: relative;
   text-shadow: -1px -1px #cf00ff, -1px 1px #cf00ff, 1px -1px #cf00ff, 1px 1px #cf00ff;
 }
 @media screen and (min-width: 600px) {
   .about__item-content-title {
-    font-size: 2.4rem;
+    font-size: clamp(28px, 3.8vw, 34px);
   }
 }
 @media screen and (min-width: 960px) {
   .about__item-content-title {
-    font-size: clamp(24px, 2vw, 30px);
+    font-size: clamp(28px, 3vw, 34px);
+    letter-spacing: 0.15em;
   }
 }
 @media screen and (min-width: 1280px) {
   .about__item-content-title {
-    font-size: clamp(28px, 2.3vw, 34px);
+    font-size: clamp(32px, 2.6vw, 38px);
   }
 }
 .about__item-content-title::after {
@@ -1145,7 +1146,7 @@ About
   width: 100%;
 }
 .about__item-content-text {
-  margin-top: min(3vh, 30px);
+  margin-top: min(3.5vh, 30px);
   font-size: 1.2rem;
   line-height: 1.4;
 }
